# hacknation-hackathon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  fly.toml  poe_tasks.toml  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
.github/workflows/: ci.yml  licenses.yml
app/: __init__.py  __main__.py  api.py  auth.py  deps.py  interview.py  models.py  outreach.py  queries.py  rescoring.py  store.py
app/static/: app.js  index.html  style.css
contracts/: __init__.py  interfaces.py  models.py  validation.py
contracts/schemas/: breakdown.schema.json  evidence.schema.json  ideal.schema.json  interview.schema.json  memo.schema.json
data/institutions/: README.md  extra_aliases.json  ror_seed.jsonl  seed_queries.txt
docs/: BRANDING.md  contract.md
docs/plan/: README.md  handover.md  roadmap.md
docs/runbooks/: databricks.md
docs/styleguide/: comments.md  config.md  docstrings.md  functions.md  git.md  naming.md  tests.md  types.md
er/: __init__.py  __main__.py  adjudicate.py  allocator.py  cluster.py  connections.py  embeddings.py  io.py  models.py  normalize.py  offline.py  pipeline.py  quality.py  rules.py  splink_job.py  survivorship.py  unmerge.py
fixtures/: __init__.py  build.py  fake_embedding.py  load.py  validate.py
fixtures/data/: bronze.arxiv_papers_raw.jsonl  bronze.github_commits_raw.jsonl  bronze.github_repos_raw.jsonl  bronze.github_users_raw.jsonl  bronze.hacknation_cvs_raw.jsonl  bronze.hacknation_people_raw.jsonl  bronze.hacknation_projects_raw.jsonl  bronze.openalex_works_raw.jsonl  bronze.zefix_companies_raw.jsonl  bronze.zefix_sogc_raw.jsonl  gold.candidate_pool.jsonl  gold.ideal_candidate.jsonl  gold.institution_score.jsonl  gold.interview.jsonl  gold.memo.jsonl  gold.outreach.jsonl  gold.person_features.jsonl  gold.thesis.jsonl  (+18 more)
frontend/: .env.demo  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
presentation/: build.py  script.md
scoring/: __init__.py  __main__.py  cli.py  deepdive.py  deps.py  features.py  funding.py  gaps.py  graph.py  institution_seed.py  institutions.py  memo.py  pool.py  profile_text.py  rescore.py  runlog.py  scripted.py  serialize.py  snapshot.py  stage_a.py  ventures.py
scrapers/: __init__.py
sources/: __init__.py
tests/: __init__.py  test_apply_ddl.py  test_db_sql.py  test_ddl_registry.py  test_hacknation_bronze.py  test_hacknation_client.py  test_hacknation_cv.py  test_hacknation_er_rules.py  test_hacknation_normalizer.py  test_hacknation_silver.py  test_ids.py  test_institutions.py  test_norm.py
tools/: __init__.py  _arrow.py  apply_ddl.py  build_institutions.py  db.py  ddl_registry.py  erase_person.py  ids.py  institutions.py  llm.py  llm_cli.py  norm.py  settings.py  smoke_test.py  verify_merge.py  warehouse.py
(+299 files in other folders)
