[project]
name = "dealflow"
version = "0.1.0"
description = "Maschmeyer's Chosen Portfolio - You don't apply. You get chosen. Early-signal VC deal sourcing."
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
db = [
  "databricks-sql-connector>=4.0",
  "databricks-sdk>=0.44",
  "pyarrow>=19",
  "python-dotenv>=1.0",
]
contracts = [
  "jsonschema>=4.23",
]
dev = [
  "basedpyright>=1.29",
  "pip-licenses>=5.0",
  "poethepoet>=0.32",
  "pre-commit>=4.0",
  "pydoclint>=0.6",
  "pytest>=8.3",
  "pytest-xdist>=3.6",
  "ruff==0.15.17",
  "ty",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "fixtures", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-private-function-args = true
allow-init-docstring = true
