[project]
name = "dealflow"
version = "0.1.0"
description = "Venture Hunt - You don't apply. You get chosen. Early-signal VC deal sourcing."
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
db = [
  "databricks-sql-connector>=4.0",
  "databricks-sdk>=0.44",
  "pyarrow>=19",
  "python-dotenv>=1.0",
]
contracts = [
  "jsonschema>=4.23",
]
scrapers = [
  "feedparser>=6.0",
  "httpx>=0.28",
  "pydantic>=2.10",
  "structlog>=25.1",
  "typer>=0.15",
]
pipeline = [
  "duckdb>=1.1",
  "networkx>=3.4",
  "rapidfuzz>=3.10",
  "splink>=4.0.16",
]
app = [
  "starlette>=0.41",
  "uvicorn>=0.32",
]
sources = [
  "httpx>=0.28",
  "pypdf>=5.0",
]
dev = [
  "basedpyright>=1.29",
  "pip-licenses>=5.0",
  "poethepoet>=0.32",
  "pre-commit>=4.0",
  "pyarrow-stubs>=20.0.0.20260625",
  "pydoclint>=0.6",
  "pytest>=8.3",
  "pytest-xdist>=3.6",
  "ruff==0.15.22",
  "ty",
]

[tool.uv]
default-groups = "all"
# splink declares igraph (GPL — blocked by the permissive-only license gate),
# but only imports it lazily inside one graph-metrics helper we never call
# (splink/internals/edge_metrics.py); the never-matching marker excludes it.
override-dependencies = ["igraph; sys_platform == 'never'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "fixtures", "tools", "scrapers", "er", "scoring", "sources", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = true
